--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Login App</title>
 </head>
 <body>
-<div style="margin: auto; max-width: 300px; margin-top: 10%">
-    <form id="loginform" method="POST">
+<div style="max-width: 300px; margin: 10% auto auto;">
+    <form id="login_form" method="POST">
         <label for="username">Username</label><br>
-        <input type="text" placeholder="username" name="username" required><br>
+        <input type="text" placeholder="username" name="username" id="username" required><br>
         <label for="password">Password</label><br>
-        <input type="password" placeholder="password" name="password" required><br>
+        <input type="password" placeholder="password" name="password" id="password" required><br>
         <input type="submit" value="SUBMIT">
     </form>
 
