--- a/reset.html
+++ b/reset.html
@@ -5,10 +5,10 @@
     <title>Login App</title>
 </head>
 <body>
-<div style="margin: auto;max-width: 300px; margin-top: 10%">
+<div style="max-width: 300px; margin: 10% auto auto;">
     <form method="POST">
-        <label for="email">Username</label><br>
-        <input type="text" placeholder="email" name="email"><br>
+        <label for="email">Email</label><br>
+        <input type="text" placeholder="email" name="email" id="email" required><br>
         <input type="submit" value="SUBMIT">
     </form>
     <p>Not a member? <a href="http://127.0.0.1:8000/register/">Sign Up Now</a></p>
